Remove LINQ implementation in favor of streams, remove edit distance functions